# opencap-to-nwb

./: .gitignore  001-nwb-view.ipynb  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: tests.yml
notebooks/: 001-nwb-view.ipynb  002-subject0.ipynb  003-emg-nwb-pipeline-demo-pipeline-at-end.ipynb  003-emg-nwb-pipeline-demo.ipynb
src/opencap_to_nwb/: __init__.py  cli.py  convert.py  discovery.py  emg.py  metadata_normalization.py  models.py  nwb_inspection.py  nwb_validation.py  nwb_writer.py  parsers.py
test_data/session_001/: README.md  metadata.yaml  trial_001.mot  trial_001.trc
test_data/subject0/: metadata.yaml
test_data/subject0/EMGData/: Asym_0_synthetic_raw_emg.csv  README_synthetic_emg.txt  Squats_0_synthetic_raw_emg.csv
test_data/subject0/MarkerData/: Asym_0.trc  Squats_0.trc  neutral.trc
test_data/subject0/OpenSimData/Dynamics/: squatsAsym_results.npy  squats_results.npy
test_data/subject0/OpenSimData/IK/: Asym_0.mot  Asym_0_ik_marker_errors.sto  Asym_0_setup_ik.xml  Squats_0.mot  Squats_0_ik_marker_errors.sto  Squats_0_setup_ik.xml
test_data/subject0/OpenSimData/Model/: LaiArnoldModified2017_poly_withArms_weldHand_generic.osim  LaiArnoldModified2017_poly_withArms_weldHand_scaled.mot  LaiArnoldModified2017_poly_withArms_weldHand_scaled.osim  LaiArnoldModified2017_poly_withArms_weldHand_scaled_adjustedMA.osim  LaiArnoldModified2017_poly_withArms_weldHand_scaled_adjustedMA_contacts.osim  LaiArnoldModified2017_poly_withArms_weldHand_scaled_mtParameters.npy  LaiArnoldModified2017_poly_withArms_weldHand_scaled_polynomial_l_default.npy  LaiArnoldModified2017_poly_withArms_weldHand_scaled_polynomial_r_default.npy  LaiArnoldModified2017_poly_withArms_weldHand_setup_scale.xml
tests/: conftest.py  test_cli.py  test_convert.py  test_discovery.py  test_emg_parser.py  test_inspect_cli.py  test_metadata.py  test_metadata_normalization.py  test_mot_parser.py  test_nwb_validation.py  test_real_opencap_workflow.py  test_trc_parser.py  test_validation.py
(+50 files in other folders)
