[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencap-to-nwb"
version = "0.1.0"
description = "Convert OpenCap/OpenSim-style movement output files to NWB."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Philip Adenekan" }
]
keywords = [
  "OpenCap",
  "OpenSim",
  "OpenCap Monocular",
  "NWB",
  "PyNWB",
  "biomechanics",
  "movement",
  "neuroscience",
  "neurorehabilitation"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "numpy>=1.23",
  "PyYAML>=6.0",
  "pynwb>=2.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=24.0"
]

[project.scripts]
opencap-to-nwb = "opencap_to_nwb.cli:main"

[project.urls]
Homepage = "https://github.com/zoldello/opencap-to-nwb"
Repository = "https://github.com/zoldello/opencap-to-nwb"
Issues = "https://github.com/zoldello/opencap-to-nwb/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]

[tool.setuptools.packages.find]
where = ["src"]